--- a/src/main/webapp/WEB-INF/templates/admin/userList.html
+++ b/src/main/webapp/WEB-INF/templates/admin/userList.html
@@ -124,5 +124,9 @@
             </tr>
         </tbody>
     </table>
+    <a th:href="@{/dashboard}">
+	    <button type="button">Go to Dashboard</button>
+	</a>
+    
 </body>
 </html>
