--- a/src/main/webapp/WEB-INF/templates/recruitment/recruitmentList.html
+++ b/src/main/webapp/WEB-INF/templates/recruitment/recruitmentList.html
@@ -120,7 +120,9 @@
 	        </tr>
         </tbody>
     </table>
-    <a href="dasboard">Back to Dashboard</a>
+    <a th:href="@{/dashboard}">
+	    <button type="button">Go to Dashboard</button>
+	</a>
 </body>
 </html>
 
