--- a/src/main/webapp/WEB-INF/templates/school-listprogram.html
+++ b/src/main/webapp/WEB-INF/templates/school-listprogram.html
@@ -130,5 +130,8 @@
             </tr>
         </tbody>
     </table>
+    <a th:href="@{/dashboard}">
+	    <button type="button">Go to Dashboard</button>
+	</a>
 </body>
 </html>
