--- a/src/main/webapp/WEB-INF/templates/state-viewprogram.html
+++ b/src/main/webapp/WEB-INF/templates/state-viewprogram.html
@@ -90,5 +90,8 @@
             window.location.href = '/GreetingSpringMVC/stateProgram/reject/' + document.getElementById('id').value;
         }
     </script>
+    <a th:href="@{/dashboard}">
+	    <button type="button">Go to Dashboard</button>
+	</a>
 </body>
 </html>
