--- a/src/main/webapp/WEB-INF/templates/viewProfile.html
+++ b/src/main/webapp/WEB-INF/templates/viewProfile.html
@@ -94,6 +94,8 @@
         </tr>
     </table>
     <br><a href="changePassword">Change Password</a><br>
-    <a href="dasboard">Back to Dashboard</a>
+    <a th:href="@{/dashboard}">
+	    <button type="button">Go to Dashboard</button>
+	</a>
 </body>
 </html>
