--- a/src/main/webapp/WEB-INF/templates/district-viewprogram.html
+++ b/src/main/webapp/WEB-INF/templates/district-viewprogram.html
@@ -90,5 +90,9 @@
             window.location.href = '/GreetingSpringMVC/districtProgram/reject/' + document.getElementById('id').value;
         }
     </script>
+    
+    <a th:href="@{/dashboard}">
+	    <button type="button">Go to Dashboard</button>
+	</a>
 </body>
 </html>
