--- a/src/main/webapp/WEB-INF/templates/event/viewEvent.html
+++ b/src/main/webapp/WEB-INF/templates/event/viewEvent.html
@@ -158,7 +158,6 @@
                         <th>Name</th>
                         <th>Description</th>
                         <th>Image</th>
-                       	<th>YouTube Link</th>
                         <th>Start</th>
                         <th>End</th>
                         <th>Event Status</th>
@@ -170,19 +169,7 @@
                         <td th:text="${iterStat.index + 1}">1</td>
                         <td th:text="${event.title}"></td>
                         <td th:text="${event.description}"></td>
-                        <!-- <td th:text="${event.image}"></td> -->
-                        <!-- Display Image from URL -->
-				        <td>
-                            <div th:if="${#strings.contains(event.image, 'youtube')}">
-                                <iframe width="300" height="200" th:src="'https://www.youtube.com/embed/' + ${#strings.substringAfter(event.image, 'v=')}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            </div>
-                            <div th:if="${#strings.contains(event.image, 'http')}">
-                                <img th:src="${event.image}" alt="Event Image" style="max-width: 300px; height: auto;">
-                            </div>
-                        </td>
-                        <!-- YOUTUBE LINK -->
-                        <td><a th:href="${event.image}" target="_blank">View YouTube</a></td>
-                        
+                        <td th:text="${event.image}"></td>
                         <td><span th:text="${event.startDate}"></span></td>
                         <td><span th:text="${event.endDate}"></span></td>
                         <td>
@@ -202,9 +189,9 @@
             <a th:href="@{/event/admin/create}" class="add-event-btn">Add Event</a>
         </div>
 
-        <div class="back-dashboard">
-            <a href="dashboard">Back to Dashboard</a>
-        </div>
+        <a th:href="@{/dashboard}">
+		    <button type="button">Go to Dashboard</button>
+		</a>
     </div>
 </body>
 </html>
