--- a/src/main/webapp/WEB-INF/templates/login_old.html
+++ b/src/main/webapp/WEB-INF/templates/login_old.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>User Registration</title>
+    <title>Login</title>
     <style>
         /* Global Styles */
         body {
@@ -87,57 +87,20 @@
     </style>
 </head>
 <body>
-<img src="@{/resources/images/kpmLogo.png}" alt="Logo" style="width: 200px; height: 200px; border-radius: 50%;">
-
-    <h1>Register User</h1>
-
-<!-- Display Error Messages -->
-    <div th:if="${error != null}" style="color: red;">
-    <p th:text="${error}"></p>
-</div>
-    
-    <!-- Registration Form -->
-    <form th:action="@{/admin/register}" method="post">
-    <!-- CSRF Token 
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-    -->
-        <div>
+    <div class="login-container">
+        <h1>Login</h1>
+        <form th:action="@{/login}" method="post">
             <label for="email">Email:</label>
-            <input type="text" id="email" name="email" th:value="${email}" required>
-        </div>
-        
-        <div>
-            <label for="fullname">Full Name:</label>
-            <input type="text" id="fullname" name="fullname" th:value="${fullname}" required>
-        </div>
+            <input type="email" id="email" name="email" required><br><br>
 
-        <div>
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
+            <input type="password" id="password" name="password" required><br><br>
 
-        <div>
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
-        </div>
-
-        <div>
-            <label for="role">Role:</label>
-            <select id="role" name="role" required>
-                <option value="ROLE_STUDENT">Student</option>
-                <option value="ROLE_SCHOOL">Teacher / School Admin</option>
-                <option value="ROLE_DISTRICT">District Admin</option>
-                <option value="ROLE_STATE">State Admin</option>
-            </select>
-        </div>
-
-        <div>
-            <button type="submit">Register</button>
-        </div>
-        <a th:href="@{/dashboard}">
-		    <button type="button">Go to Dashboard</button>
-		</a>
-    </form>
-    
+            <button type="submit">Login</button>
+            
+            <h3 th:if="${param.error}" style="color: red;">Invalid email or password.</h3>
+        </form>
+    </div>
 </body>
 </html>
+
